2004-07-16 Seiichi SATO  <ssato@sh.rim.or.jp>

	* contrib/icon/mlterm-icon.svg, contrib/icon/mlterm-icon-trans.svg:
	contributed from Tobias Kieslich.

2004-07-11 MINAMI Hirokazu <minami@mistfall.net>

	* doc/term/mlterm.*: changed some sequences to be rxvt compatible. 

2004-07-07 Seiichi SATO  <ssato@sh.rim.or.jp>

	* inputmethod/uim/Makefile.in: Added X_CFLAGS.

	* inputmethod/uim/im_uim.c: fixed wrong header path.

2004-06-27  Araki Ken  <arakiken@users.sf.net>

	* x_window.c: Fixed a failure of compilation.

2004-06-21 Seiichi SATO  <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c (uim_read_conf): Renamed to ...
	* tool/mlconfig/mc_im.c (read_uim_conf): ..this.

	* tool/mlconfig/mc_im.c (xim_read_conf): Renamed to ...
	* tool/mlconfig/mc_im.c (read_xim_conf): ..this.

	* tool/mlconfig/mc_im.c (read_uim_conf): Fixed a minor bug.

2004-06-20  Seiichi SATO  <ssato@sh.rim.or.jp>

	* x_im_candidate_screen.c(set_candidates): In encoding conversion, set
	msb if need be.

2004-06-20  Seiichi SATO  <ssato@sh.rim.or.jp>

	* x_term_manager.c(x_term_manager_init):
	* x_main_config.c(x_prepare_for_main_config):
	Some cleanups against help messages. The words in round brackets
	indicate available values, and the square bracket quoted value is
	default. (description (value1/value2/...) [default])

	* x_screen.c, x_screen.h:
	To unify input method related options and configuration keys,
	--openim(xim_open_in_startup) option, 'xim' key and 'xim_name' key are
	removed. How to use new input method option:
	--im=xim .... use XIM with the default server specified by XMODIFIERS
	--im=xim:xcin ... use XIM with xcin on the current locale.
	--im=xim:Ami:ko_KR.eucKR ... use XIM with Ami on ko_KR.eucKR locale.
	--im=uim ... use uim with the default conversion engine.
	--im=uim:anthy ... use uim with anthy engine.

	- Added 'default_xim_name' key to allow mlconfig to select xim server
	automatically.

	* x_xic.c, x_xic.h(x_xic_get_default_xim_name):